--- a/final/refs.bib
+++ b/final/refs.bib
@@ -316,7 +316,7 @@
 @inproceedings{c:3,
   author    = {Abhishek, Manish Kumar and Rajeswara Rao, D.},
   booktitle = {2021 Fifth World Conference on Smart Trends in Systems Security and Sustainability (WorldS4)},
-  title     = {Framework to Secure Docker Containers},
+  title     = {{Framework to Secure Docker Containers}},
   year      = {2021},
   pages     = {152-156},
   doi       = {10.1109/WorldS451998.2021.9514041}
@@ -401,14 +401,21 @@
 
 @misc{d:alternative-runtimes,
   author = {},
-  title  = {Alternative container runtimes},
+  title  = {{Alternative container runtimes}},
   note   = {\textit{docs.docker.com}, Feb. 21, 2024},
   url    = {{\url{https://docs.docker.com/engine/alternative-runtimes}. [Accessed: \today]}}
 }
 
+@misc{d:clairdeployment,
+  author = {},
+  title  = {{Deploying Clair — Clair Documentation}},
+  note   = {\textit{quay.github.io}},
+  url    = {{\url{https://quay.github.io/clair/howto/deployment.html}. [Accessed: \today]}}
+}
+
 @misc{d:config,
   author = {},
-  title  = {opencontainers/runtime-spec — Configuration},
+  title  = {{opencontainers/runtime-spec — Configuration}},
   note   = {\textit{github.com}, Sep. 28, 2021},
   url    = {{\url{https://github.com/opencontainers/runtime-spec/blob/main/config.md}. [Accessed: \today]}}
 }
@@ -422,7 +429,7 @@
 
 @misc{d:dockerrootless,
   author = {},
-  title  = {Run the Docker daemon as a non-root user (Rootless mode)},
+  title  = {{Run the Docker daemon as a non-root user (Rootless mode)}},
   note   = {\textit{docs.docker.com}, Feb. 21, 2024},
   url    = {{\url{https://docs.docker.com/engine/security/rootless}. [Accessed: \today]}}
 }
@@ -436,7 +443,7 @@
 
 @misc{d:dockerseccomp,
   author = {},
-  title  = {Seccomp security profiles for Docker},
+  title  = {{Seccomp security profiles for Docker}},
   note   = {\textit{docs.docker.com}},
   url    = {{\url{https://docs.docker.com/engine/security/seccomp}. [Accessed: \today]}}
 }
@@ -450,7 +457,7 @@
 
 @misc{d:enhancements,
   author = {},
-  title  = {KEP-127: Support User Namespaces},
+  title  = {{KEP-127: Support User Namespaces}},
   note   = {\textit{github.com}, Feb. 8, 2024},
   url    = {{\url{https://github.com/kubernetes/enhancements/blob/master/keps/sig-node/127-user-namespaces/README.md}. [Accessed: \today]}}
 }
@@ -464,14 +471,14 @@
 
 @misc{d:implementations,
   author = {},
-  title  = {opencontainers/runtime-spec — Implementations},
+  title  = {{opencontainers/runtime-spec — Implementations}},
   note   = {\textit{github.com}, Sep. 28, 2021},
   url    = {{\url{https://github.com/opencontainers/runtime-spec/blob/main/implementations.md}. [Accessed: \today]}}
 }
 
 @misc{d:kernel1,
   author = {},
-  title  = {No New Privileges Flag},
+  title  = {{No New Privileges Flag}},
   note   = {\textit{kernel.org}},
   url    = {{\url{https://www.kernel.org/doc/html/v4.19/userspace-api/no_new_privs.html}. [Accessed: \today]}}
 }
@@ -485,23 +492,44 @@
 
 @misc{d:kernelsmack,
   author = {},
-  title  = {Smack},
+  title  = {{Smack}},
   note   = {\textit{kernel.org}},
   url    = {{\url{https://www.kernel.org/doc/html/v4.18/admin-guide/LSM/Smack.html}. [Accessed: \today]}}
 }
 
 @misc{d:ocilinux,
   author = {},
-  title  = {Linux Container Configuration},
+  title  = {{Linux Container Configuration}},
   note   = {\textit{github.com}},
   url    = {{\url{https://github.com/opencontainers/runtime-spec/blob/main/config-linux.md}. [Accessed: \today]}}
 }
 
 @misc{d:ocirunspec,
   author = {},
-  title  = {Open Container Initiative Runtime Specification},
+  title  = {{Open Container Initiative Runtime Specification}},
   note   = {\textit{github.com}, May 16, 2023},
   url    = {{\url{https://github.com/opencontainers/runtime-spec/blob/main/spec.md}. [Accessed: \today]}}
+}
+
+@misc{d:scoutdb,
+  author = {},
+  title  = {{Advisory database sources and matching service}},
+  note   = {\textit{docs.docker.com}},
+  url    = {{\url{https://docs.docker.com/scout/advisory-db-sources}. [Accessed: \today]}}
+}
+
+@misc{d:trivystart,
+  author = {},
+  title  = {{Getting Started}},
+  note   = {\textit{aquasecurity.github.io}},
+  url    = {{\url{https://aquasecurity.github.io/trivy/v0.51}. [Accessed: \today]}}
+}
+
+@misc{d:trivyvulnerability,
+  author = {},
+  title  = {{Vulnerability Scanning}},
+  note   = {\textit{aquasecurity.github.io}},
+  url    = {{\url{https://aquasecurity.github.io/trivy/v0.51/docs/scanner/vulnerability}. [Accessed: \today]}}
 }
 
 @misc{gh:buildah,
@@ -603,35 +631,35 @@
 
 @misc{m:capabilities,
   author = {},
-  title  = {capabilities(7) — Linux manual page},
+  title  = {{capabilities(7) — Linux manual page}},
   note   = {\textit{man7.org}, Dec. 22, 2023},
   url    = {{\url{https://man7.org/linux/man-pages/man7/capabilities.7.html}. [Accessed: \today]}}
 }
 
 @misc{m:cgroups,
   author = {},
-  title  = {cgroups(7) — Linux manual page},
+  title  = {{cgroups(7) — Linux manual page}},
   note   = {\textit{man7.org}, Dec. 22, 2023},
   url    = {{\url{https://man7.org/linux/man-pages/man7/cgroups.7.html}. [Accessed: \today]}}
 }
 
 @misc{m:crun,
   author = {},
-  title  = {crun(1) General Commands Manual},
+  title  = {{crun(1) — General Commands Manual}},
   note   = {\textit{man.archlinux.org}},
   url    = {{\url{https://man.archlinux.org/man/crun.1.en}. [Accessed: \today]}}
 }
 
 @misc{m:fifo,
   author = {},
-  title  = {fifo(7) — Linux manual page},
+  title  = {{fifo(7) — Linux manual page}},
   note   = {\textit{man7.org}, Dec. 22, 2023},
   url    = {{\url{https://man7.org/linux/man-pages/man7/fifo.7.html}. [Accessed: \today]}}
 }
 
 @misc{m:lxc,
   author = {},
-  title  = {lxc(7) — Linux manual page},
+  title  = {{lxc(7) — Linux manual page}},
   note   = {\textit{man7.org}, Jun. 16, 2022},
   url    = {{\url{https://man7.org/linux/man-pages/man7/lxc.7.html}. [Accessed: \today]}}
 }
@@ -639,35 +667,35 @@
 
 @misc{m:namespaces,
   author = {},
-  title  = {namespaces(7) — Linux manual page},
+  title  = {{namespaces(7) — Linux manual page}},
   note   = {\textit{man7.org}, Dec. 22, 2023},
   url    = {{\url{https://man7.org/linux/man-pages/man7/namespaces.7.html}. [Accessed: \today]}}
 }
 
 @misc{m:runc,
   author = {},
-  title  = {runc(8) System Manager's Manual},
+  title  = {{runc(8) — System Manager's Manual}},
   note   = {\textit{man.archlinux.org}},
   url    = {{\url{https://man.archlinux.org/man/extra/runc/runc.8.en}. [Accessed: \today]}}
 }
 
 @misc{m:runc-create,
   author = {},
-  title  = {runc-create(8) System Manager's Manual},
+  title  = {{runc-create(8) System Manager's Manual}},
   note   = {\textit{man.archlinux.org}},
   url    = {{\url{https://man.archlinux.org/man/runc-create.8.en}. [Accessed: \today]}}
 }
 
 @misc{m:seccomp,
   author = {},
-  title  = {seccomp(2) — Linux manual page},
+  title  = {{seccomp(2) — Linux manual page}},
   note   = {\textit{man7.org}, Dec. 22, 2023},
   url    = {{\url{https://man7.org/linux/man-pages/man2/seccomp.2.html}. [Accessed: \today]}}
 }
 
 @misc{m:usernamespaces,
   author = {},
-  title  = {user\_namespaces(7) — Linux manual page},
+  title  = {{user\_namespaces(7) — Linux manual page}},
   note   = {\textit{man7.org}, Dec. 22, 2023},
   url    = {{\url{https://man7.org/linux/man-pages/man7/user_namespaces.7.html}. [Accessed: \today]}}
 }
@@ -687,7 +715,6 @@
   url    = {{\url{https://nvd.nist.gov/vuln/detail/CVE-2021-44228}. [Accessed: \today]}}
 }
 
-
 @article{pcs:1,
   title   = {A review of native container security for running applications},
   journal = {Procedia Computer Science},
@@ -702,9 +729,23 @@
 
 @misc{report:dynamic,
   author = {Rony Moshkovich},
-  title  = {Industry's First Dynamic Analysis of 4 million Publicly Available Docker Hub Container Images},
+  title  = {{Industry's First Dynamic Analysis of 4 million Publicly Available Docker Hub Container Images}},
   note   = {\textit{prevasio.io}, Dec. 1, 2020},
   url    = {{\url{https://uploads-ssl.webflow.com/609ccd86b14ba6e17f9fbce4/643ba6fc599bb82bfdea2456_Red_Kangaroo.pdf}. [Accessed: \today]}}
+}
+
+@misc{s:clair-intro2,
+  author = {},
+  title  = {{Chapter 7. Clair Security Scanning}},
+  note   = {\textit{access.redhat.com}},
+  url    = {{\url{https://access.redhat.com/documentation/en-us/red_hat_quay/3.6/html/manage_red_hat_quay/clair-intro2}. [Accessed: \today]}}
+}
+
+@misc{s:clair2015,
+  author = {Iain Thomson},
+  title  = {{CoreOS open sources Clair, the vulnerability scanner for your containers}},
+  note   = {\textit{theregister.com}, Nov. 13, 2015},
+  url    = {{\url{https://www.theregister.com/2015/11/13/coreos_open_sources_vulnerability_scanner}. [Accessed: \today]}}
 }
 
 @misc{s:CVE-2019-5736,
@@ -805,11 +846,25 @@
   url    = {{\url{https://access.redhat.com/security/vulnerabilities/cve-2016-9962}. [Accessed: \today]}}
 }
 
+@misc{s:scoutga,
+  author = {Docker Team},
+  title  = {{Announcing Docker Scout GA: Actionable Insights for the Software Supply Chain}},
+  note   = {Oct. 4, 2023},
+  url    = {{\url{https://www.docker.com/blog/announcing-docker-scout-ga}. [Accessed: \today]}}
+}
+
 @misc{s:unit42,
   author = {Yuval Avrahami},
   title  = {Breaking out of Docker via runC — Explaining CVE-2019-5736},
   note   = {\textit{unit42.paloaltonetworks.com}, Feb. 21, 2019},
   url    = {{\url{https://unit42.paloaltonetworks.com/breaking-docker-via-runc-explaining-cve-2019-5736/}. [Accessed: \today]}}
+}
+
+@misc{s:what-is-clair,
+  author = {},
+  title  = {{What is Clair?}},
+  note   = {\textit{redhat.com}, Jan. 8, 2019},
+  url    = {{\url{https://www.redhat.com/en/topics/containers/what-is-clair}. [Accessed: \today]}}
 }
 
 @misc{s:what-is-selinux,
@@ -877,4 +932,3 @@
   pages     = {230-251},
   url       = {\url{https://doi.org/10.1007/978-3-319-60876-1_11}}
 }
-
